[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bml-subpro"
version = "0.3.0"
description = "BML 动漫字幕制作与发布流水线 — 单集/合集工作流、字幕繁化、封装、上传与发布"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Billion Meta Lab"},
]
keywords = ["anime", "subtitle", "encoding", "hevc", "torrent", "whisper", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "tqdm>=4.64",
    "boto3>=1.28",
    "botocore>=1.31",
    "requests>=2.28",
    "pydub>=0.25",
    "qbittorrent-api>=2023",
]

[project.optional-dependencies]
transcribe = ["mlx-whisper>=0.3"]
torrent = ["libtorrent>=2.0"]
all = ["bml-subpro[transcribe,torrent]"]

[project.scripts]
bmlsub = "bmlsub.cli:main"

[tool.setuptools]
packages = ["bmlsub"]
