[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmlsub"
version = "1.0.0"
description = "Reliable local execution core for BML subtitle workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Billion Meta Lab"}]
dependencies = [
    "requests>=2.28",
    "fonttools>=4.40",
    "xxhash>=3.5",
    "mlx-whisper>=0.4",
    "libtorrent>=2.0,<3",
    "boto3>=1.34,<2",
    "keyring>=25,<26",
]

[project.scripts]
bmlsub = "bmlsub.cli:main"

[tool.setuptools.packages.find]
include = ["bmlsub*"]
exclude = ["tests*", "tools*", "Project*", "examples*"]
